--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "revisao-mobile",
-    "slug": "snack-1a3e971e-0a77-4cc4-8835-6aa9c16d4caa",
+    "name": "api-starwars",
+    "slug": "snack-429e9d53-401c-4100-a1a9-55d88d0bffab",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
