--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-paper": "4.9.2",
     "@expo/vector-icons": "^13.0.0",
+    "react-native-paper": "4.9.2",
+    "react-native-screens": "~3.20.0",
     "@react-navigation/native": "^5.7.3",
-    "@react-navigation/bottom-tabs": "*",
+    "@react-navigation/bottom-tabs": "^5.11.10",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0"
+    "@react-navigation/stack": "^5.14.5",
+    "react-native-gesture-handler": "~2.9.0",
+    "@react-native-community/masked-view": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
